--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Player vs. Player</title>
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <title>Versus</title>
 </head>
 <body>
-    <div id="main">
-        <h1>Player vs. Player</h1>
-    </div>
+      <nav class="blue-grey darken-3">
+        <div class="nav-wrapper container">
+          <a href="#" class="brand-logo">Versus</a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="#" id="home-link">Home</a></li>
+            <li><a href="#">Create Post</a></li>
+            <li><a href="#">Comments</a></li>
+            <li><a href="#">Login</a></li>
+          </ul>
+        </div>
+      </nav>
+    <div id="main"></div>
 
     <script src="javascripts/index.js"></script>
 </body>
