--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
           <a href="#" class="brand-logo">Versus</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="#" id="home-link">Home</a></li>
-            <li><a href="#">Create Post</a></li>
-            <li><a href="#">Comments</a></li>
+            <li><a href="#" id="create-post-link">Create Post</a></li>
+            <li><a href="#" id="discussions-link">Discussions</a></li>
             <li><a href="#">Login</a></li>
           </ul>
         </div>
       </nav>
-    <div id="main"></div>
+    <div class= container id="main"></div>
 
     <script src="javascripts/index.js"></script>
 </body>
