--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
       <nav class="blue-grey darken-3">
         <div class="nav-wrapper container">
-          <a href="#" class="brand-logo">Versus</a>
+          <a href="#" id="name-logo" class="brand-logo">Versus</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="#" id="home-link">Home</a></li>
             <li><a href="#" id="create-post-link">Create Post</a></li>
