--- a/index.html
+++ b/index.html
@@ -19,18 +19,7 @@
             <li><a href="#" id="home-link">Home</a></li>
             <li><a href="#" id="create-post-link">Create Post</a></li>
             <li><a href="#" id="discussions-link">Discussions</a></li>
-            <li><a href="#" id="login-link">Login</a>
-              <div class="container">
-                <form action="POST" class="form" id="login">
-                  <h1 class="form__title">Login</h1>
-                  <div class="form__message form__message--error">Incorrect username/password combination.</div>
-                  <div class="form__input-group">
-                    <input type="text" class="form__input" autofocus placeholder="Username or email">
-                    <div class="form__input-error-message">This is an error message</div>
-                  </div>
-                </form>
-              </div>
-            </li>
+            <li><a href="#" id="login-link">Login</a></li>
           </ul>
         </div>
       </nav>
