--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <title>Versus</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
       <nav class="blue-grey darken-3">
@@ -28,19 +29,3 @@
     <script src="javascripts/index.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-<div class="container">
-    <form action="POST" class="form" id="login">
-      <h1 class="form__title">Login</h1>
-      <div class="form__message form__message--error">Incorrect username/password combination.</div>
-      <div class="form__input-group">
-        <input type="text" class="form__input" autofocus placeholder="Username or email">
-        <div class="form__input-error-message">This is an error message</div>
-      </div>
-    </form>
-</div>
