--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
@@ -19,7 +19,7 @@
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="#" id="home-link">Home</a></li>
             <li><a href="#" id="create-post-link">Create Post</a></li>
-            <li><a href="#" id="discussions-link">Discussions</a></li>
+            <li><a href="#" id="posts-link">Posts</a></li>
             <li><a href="#" id="login-link">Login</a></li>
           </ul>
         </div>
