--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="#" id="home-link">Home</a></li>
             <li><a href="#" id="create-post-link">Create Post</a></li>
-            <li><a href="#" id="posts-link">Posts</a></li>
+            <li><a href="#" id="discussions-link">Discussions</a></li>
             <li><a href="#" id="login-link">Login</a></li>
           </ul>
         </div>
       </nav>
-    <div class= container id="main"></div>
+    <div class= "container" id="main"></div>
         
     <script src="javascripts/index.js"></script>
 </body>
